# theHeartbeat

./: .contemporary.json  .parlance.json  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  README.md  theHeartbeat.pro
ci/: travis.sh
heartbeat/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  com.vicr123.theheartbeat.desktop  heartbeat.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  processaction.cpp  processaction.h  processaction.ui  theheartbeat.desktop
heartbeat/panes/: mininumberpane.cpp  mininumberpane.h  mininumberpane.ui  minipercentagepane.cpp  minipercentagepane.h  minipercentagepane.ui  minmaxpane.cpp  minmaxpane.h  minmaxpane.ui  numberpane.cpp  numberpane.h  numberpane.ui  percentagepane.cpp  percentagepane.h  percentagepane.ui  sidepane.cpp  sidepane.h
heartbeat/processes/: process.cpp  process.h  processmanager.cpp  processmanager.h  processmodel.cpp  processmodel.h
heartbeat/system/: systemmanager.cpp  systemmanager.h
heartbeat/translations/: aa_ET.ts  af_ZA.ts  am_ET.ts  ar_BH.ts  ar_DZ.ts  ar_KM.ts  ar_KW.ts  ar_LB.ts  ar_LY.ts  ar_MA.ts  ar_MR.ts  ar_OM.ts  ar_PS.ts  ar_SA.qm  ar_SA.ts  ar_SD.ts  ar_SO.ts  ar_TD.ts  ar_TN.ts  as_IN.ts  az_AZ.ts  be_BY.ts  bg_BG.ts  bs_BA.ts  cr_CA.ts  cs_CZ.ts  cy_GB.qm  cy_GB.ts  da.qm  da.ts  de_DE.qm  de_DE.ts  en_CA.ts  en_GB.ts  en_NZ.ts  en_US.ts  es.ts  es_AR.ts  es_BO.ts  es_CL.ts  (+81 more)
heartbeat/translations/desktop/com.vicr123.theheartbeat/: ar_SA.json  bg.json  cs_CZ.json  da.json  de.json  en.json  he_IL.json  id.json  nl.json  sl.json  tr.json  vi.json
